# Group-Schedule-Manager

./: CMakeLists.txt  README.md  final_reflection.md
include/: CollegeEvent.h  DayConverter.h  DaySchedule.h  Event.h  FileInOut.h  MyTime.h  StudentEvent.h  SystemAlgorithm.h  WeekSchedule.h
src/: CollegeEvent.cpp  DayConverter.cpp  DaySchedule.cpp  Event.cpp  FileInOut.cpp  Main.cpp  MyTime.cpp  StudentEvent.cpp  SystemAlgorithm.cpp  WeekSchedule.cpp
